- project type is always AD
- manage tenants dialog
- unpack backup - simplified view